# tinker_ki_starter

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TODO  docker-compose-signalapi.yaml  docker-compose.yaml  pyproject.toml
docs/: ROADMAP.md  STATUS.md
docs/decisions/: ADR-001-pipeline-context-object.md  ADR-002-mulit-tenant-operationt.md  ADR-003-opentelemetry.md  ADR-004-no-langchain-usage.md  ADR-005-split-signalbot-up-to-improve-DI.md  ADR-006-GDPR.md
models/: poc_modelfile
otel/: otel-collector-config.yaml
src/: signal_bot_poc.py
src/modules/: otel_init.py
