[project]
name = "tinker-ki-starter"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Arndt",email = "joebubi@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "signalbot (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
