[project]
name = "tinker-ki-starter"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Arndt",email = "joebubi@posteo.de"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "signalbot (>=1.0.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "faster-whisper (>=1.2.1,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
